# dalang

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  demo_yt_content.txt  pyproject.toml
dalang/: helpers.py  types.py  utils.py
dalang/apis/: cyaniteapi.py  proxyport.py  utils.py
dalang/config/: config.env  configs.py
dalang/crawling/: __init__.py  spotifyconnection.py  spotifycrawler.py  spotifyidcrawler.py  spotifyrecommendationscrawler.py
dalang/discordbot/: client.py  commands.py  db.py  fetch_messages_from_channel.py  fetch_youtube_links_from_channel.py  helpers.py  main.py  mood_collector.py  prepare_channel_messages_for_text_to_mood.py  save_recordings.py  views.py  youtube_to_genre_mood.py
dalang/models/: __init__.py  cyanite.py  distilbert.py  huggingfacemodel.py  speech2text.py  speechbrain.py  speechtomood.py  speechtotext.py  texttomood.py  wav2vec.py
dalang/postprocessing/: averagepredictionsaggregator.py  predictionsaggregator.py  predictionscleaner.py
dalang/tagging/: __init__.py  cyanitegenretokeywordsmapper.py  distilberttocyanitemapper.py  distilberttokeywordsmapper.py  speechbraintocyanitemapper.py  speechbraintokeywordsmapper.py  tagmapper.py  tags.py
examples/: cyanite.py  cyanite_api.py  speech_emotion_recognition.py  speech_emotion_recognition_2.py  spotify_api.py  text_emotion_recognition.py
tests/: test_images.py
