[tool.poetry]
name = "dalang"
version = "0.1.0"
description = ""
authors = []

[tool.poetry.dependencies]
transformers = "4.20.1"
python = "~3.8"
protobuf = "3.20.0"
numpy = "1.23.0"
opencv-python = "4.6.0.66"
pandas = "1.4.3"
pre-commit = "2.19.0"
rmn = "3.0.4"
syrupy = "2.3.0"
sentencepiece = "^0.1.96"
speechbrain = "0.5.12"
spotipy = "^2.20.0"
python-dotenv = "^0.20.0"
pyngrok = "^5.1.0"
PyNaCl = "^1.4.0"
py-cord = {version = "2.0.0rc1", extras = ["voice"]}
youtube_dl = "^2021.12.17"
audiofile = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
pytest = "7.1.2"
isort = "5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
exclude = '''
/(
	\.git
| _build
)/
'''

[tool.isort]
profile = "black"
known_third_party = []
skip_glob = []
line_length = 79